--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,4 +7,6 @@
               [words]="['Hasintha', '< prev', 'next >']"></ngx-cursor>
   <app-about></app-about>
   <app-worked></app-worked>
+  <app-built></app-built>
+  <app-projects></app-projects>
 </section>
