--- a/src/app/portfolio/worked/worked.component.scss
+++ b/src/app/portfolio/worked/worked.component.scss
@@ -8,7 +8,7 @@
    align-items: center;
 
    .worked-body {
-     width: 70%;
+     width: 60%;
      //background-color: blue;
      height: 100%;
      display: flex;
@@ -22,7 +22,7 @@
        height: 100px;
        flex-direction: row;
        display: flex;
-       //justify-content: center;
+       justify-content: center;
        align-items: center;
 
        //background-color: red;
@@ -50,7 +50,7 @@
      .flex_2 {
        z-index: 99;
        width: 100%;
-       height: 100%;
+       height: 60%;
        flex-direction: row;
        display: flex;
        //justify-content: center;
@@ -59,8 +59,8 @@
        justify-content: center;
 
        .flex_2_body {
-         width: 60%;
-         height: 80%;
+         width: 70%;
+         height: 70%;
          //background-color: green;
          display: flex;
          flex-direction: row;
@@ -88,10 +88,12 @@
            }
          }
          .side_2 {
-           width: 80%;
+           width: 100%;
            //background-color: mediumpurple;
            height: 100%;
            padding-top: 10px;
+           display: flex;
+           justify-content: center;
            .box_position {
              width: 100%;
              height: 8%;
@@ -136,25 +138,38 @@
 //small lap>>>
 @media only screen and (max-width: 1023px) {
 
+  .side_2 {
+    //width: 100% !important;
+    //background-color: gray!important;
+  }
 }
 
 //tablet>>>
 @media only screen and (max-width: 806px) {
 
+  .worked-body {
+    //background-color: #000;
+    width: 80%!important;
+  }
   .flex_2_body{
-    width: 100% !important;
+    //width: 100% !important;
+    height: auto!important;
     flex-direction: column!important;
+    //background-color: blue!important;
   }
   .side_1 {
     flex-direction: row!important;
     display: flex!important;
     width: 100%!important;
     height: auto!important;
+    //background-color: red!important;
+    overflow: hidden;
+    overflow-x: scroll;
+    overflow-y: hidden;
     .btn_worked {
       width: 100px!important;
     }
   }
-
   .txt_position {
     font-size: 16px!important;
   }
@@ -173,6 +188,7 @@
   .ruler {
     display: none!important;
   }
+
 
 }
 
