portfolio main page completed without animation or function working

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -9,4 +9,6 @@
   <app-worked></app-worked>
   <app-built></app-built>
   <app-projects></app-projects>
+  <app-touch></app-touch>
+  <app-footer></app-footer>
 </section>
