--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<div class="bg-f">
+  <div class="projects-body">
+    <p class="txt_footer">Designed & Built by Hasintha Diyaneth</p>
+    <div class="rate_box">
+      <img class="star" src="../../../assets/images/icons/icons8-star-50.png" alt=""><span
+      class="rates">{{rates}}</span>
+
+    </div>
+  </div>
+</div>
