article site completed

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,1 +1,11 @@
-<p>blog works!</p>
+
+
+
+<section class="main">
+  <app-blog-header></app-blog-header>
+  <app-landing-page></app-landing-page>
+  <ngx-cursor color="transparent" border="3px solid white" cursor-hasintha   [selectors]="['Hasintha', 'Home', 'name']"
+              [words]="['Hasintha', '< prev', 'next >']"></ngx-cursor>
+  <app-post-list></app-post-list>
+  <app-blog-footer></app-blog-footer>
+</section>
