--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="bg-f">
-  <div class="projects-body">
+  <div class="footer-body">
     <p class="txt_footer">Designed & Built by Hasintha Diyaneth</p>
     <div class="rate_box">
       <img class="star" src="../../../assets/images/icons/icons8-star-50.png" alt=""><span
