--- a/src/app/portfolio/about/about.component.html
+++ b/src/app/portfolio/about/about.component.html
@@ -49,9 +49,18 @@
 
     </div>
     <div class="side_2">
-      <div class="flex_img">
-        <img class="img_hasintha" src="../../../assets/images/img/hasi.jpg" alt="">
+      <div class='container'>
+        <div class='circle'>
+          <div class='inner'>
+            <img class="img_hasintha" src="../../../assets/images/img/my3.jpg" alt="">
+
+            <!--<div class="flex_img">-->
+            <!--<img class="img_hasintha" src="../../../assets/images/img/my3.jpg" alt="">-->
+            <!--</div>-->
+          </div>
+        </div>
       </div>
+
     </div>
 
   </div>
