--- a/src/app/portfolio/about/about.component.scss
+++ b/src/app/portfolio/about/about.component.scss
@@ -116,18 +116,133 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      .flex_img {
-        width: 90%;
-        height: 300px;
-        //background-color: #80cbc4;
+      .container {
         display: flex;
-        z-index: 99;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        overflow: hidden;
+        flex-wrap: wrap;
+      }
+
+      @keyframes rainblow {
+        from {
+          filter: hue-rotate(0deg);
+        }
+        to {
+          filter: hue-rotate(359deg);
+        }
+      }
+      @-o-keyframes rainblow {
+        from {
+          filter: hue-rotate(0deg);
+        }
+        to {
+          filter: hue-rotate(359deg);
+        }
+      }
+      @-moz-keyframes rainblow {
+        from {
+          filter: hue-rotate(0deg);
+        }
+        to {
+          filter: hue-rotate(359deg);
+        }
+      }
+      @-webkit-keyframes rainblow {
+        from {
+          filter: hue-rotate(0deg);
+        }
+        to {
+          filter: hue-rotate(359deg);
+        }
+      }
+      @keyframes rainblow2 {
+        from {
+          filter: hue-rotate(0deg) blur(16px);
+        }
+        to {
+          filter: hue-rotate(359deg) blur(16px);
+        }
+      }
+      @-o-keyframes rainblow2 {
+        from {
+          filter: hue-rotate(0deg) blur(16px);
+        }
+        to {
+          filter: hue-rotate(359deg) blur(16px);
+        }
+      }
+      @-moz-keyframes rainblow2 {
+        from {
+          filter: hue-rotate(0deg) blur(16px);
+        }
+        to {
+          filter: hue-rotate(359deg) blur(16px);
+        }
+      }
+      @-webkit-keyframes rainblow2 {
+        from {
+          filter: hue-rotate(0deg) blur(16px);
+        }
+        to {
+          filter: hue-rotate(359deg) blur(16px);
+        }
+      }
+      .circle {
+        position: relative;
+      }
+      .circle::before, .circle::after {
+        animation: rainblow 5s linear infinite;
+        -webkit-animation: rainblow 5s linear infinite;
+        content: "";
+        position: absolute;
+        inset: 24px;
+        border-radius: 50%;
+        border: 7px solid #FD7E14;
+        cursor: pointer;
+        z-index: 0;
+      }
+      .circle::after {
+        animation: rainblow2 5s linear infinite;
+        -webkit-animation: rainblow2 5s linear infinite;
+        opacity: 0.4;
+        inset: 16px;
+        border: 0px solid #fed1ac;
+      }
+      .circle .inner {
+        width: 350px;
+        height: 350px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .img_hasintha {
+        width: 300px;
+        height: 300px;
+        border-radius: 100%;
+
+      }
+      .flex_img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        //height: 300px;
+        //border-right: 2px solid white;
+        //border-bottom: 2px solid white;
+        //border-bottom-right-radius: 10px;
+        //padding-right: 10px;
+        //padding-bottom: 10px;
+        //display: flex;
+        //z-index: 99;
+        //justify-content: center;
+        //align-items: center;
+        //overflow: hidden;
         .img_hasintha {
           width: 300px;
           height: 300px;
+          border-radius: 100%;
+
         }
       }
 
@@ -156,9 +271,18 @@
   }
   .side_2 {
     margin-top: 20px;
+    .circle .inner {
+      width: 250px !important;
+      height: 250px !important;
+      .img_hasintha {
+        width: 200px!important;
+        height: 200px !important;
+      }
+    }
     .flex_img {
-      width: 200px!important;
-      height: 200px!important;
+      width: auto!important;
+      height: auto!important;
+      border: none!important;
       //background-color: #80cbc4;
     }
   }
