--- a/src/app/portfolio/home-page/home-page.component.html
+++ b/src/app/portfolio/home-page/home-page.component.html
@@ -22,11 +22,11 @@
 
     </div>
     <div class="box-2">
-      <p class="txt-name"  >Hasintha Diyaneth.</p>
-      <p class="txt-what-do">I build things for the web.</p>
+      <p class="txt-name"  >{{name}}</p>
+      <p class="txt-what-do">{{profession}}</p>
     </div>
     <div class="box-3">
-      <p class="txt-description">I’m a software engineer specializing in building (and occasionally designing) exceptional digital experiences. Currently, I’m focused on building accessible, human-centered products at</p>
+      <p class="txt-description">{{description}}</p>
 
     </div>
     <div class="box-4">
