--- a/src/app/template/footer/footer.component.scss
+++ b/src/app/template/footer/footer.component.scss
@@ -5,8 +5,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  .projects-body {
-    width: 70%;
+  .footer-body {
+    width: 100%;
     height: 90%;
     display: flex;
     flex-direction: column;
