--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -1,33 +1,14 @@
-<!--<mat-drawer-container class="example-container" autosize>-->
-  <!--<mat-drawer #drawer class="example-sidenav" mode="side">-->
-    <!--<p>Auto-resizing sidenav</p>-->
-    <!--<p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>-->
-
-  <!--</mat-drawer>-->
-
-  <!--<div class="example-sidenav-content">-->
-    <!--<button type="button" mat-button >-->
-      <!--Toggle sidenav-->
-    <!--</button>-->
-  <!--</div>-->
-
-
-
-
-<!--</mat-drawer-container>-->
-
-
 <div class="main">
   <mat-drawer #drawer class="example-sidenav" mode="over">
     <div class="example-sidenav-box">
-      <button type="button" mat-button class="btn-route">
+      <button type="button" mat-button class="btn-route" routerLink="/portfolio">
         01. Home
       </button>
-      <button type="button" mat-button class=" btn-route">
-        02. Works
+      <button type="button" mat-button class=" btn-route" routerLink="/blog">
+        02. Blog
       </button>
       <button type="button" mat-button class=" btn-route">
-        03. Blog
+        03. Shopping
       </button>
       <button type="button" mat-button class=" btn-resume">
         Resume
@@ -42,19 +23,21 @@
     <!--<p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>-->
 
   </mat-drawer>
+
+
   <div class="logo-section">
-    <img src="../../../assets/images/logos/logo.png" class="img">
+    <img src="../../../assets/images/logos/logo.png" class="img" (click)="drawer.toggle()">
   </div>
 
   <div class="btn-section">
-    <button type="button" mat-button class="btn-route">
+    <button type="button" mat-button class="btn-route" routerLink="/portfolio">
       01. Home
     </button>
-    <button type="button" mat-button class=" btn-route">
-      02. Works
+    <button type="button" mat-button class=" btn-route" routerLink="/blog">
+      02. Blog
     </button>
     <button type="button" mat-button class=" btn-route">
-      03. Blog
+      03. Shopping
     </button>
     <button type="button" mat-button class=" btn-resume">
       Resume
@@ -71,7 +54,7 @@
 
   </div>
   <div class="menu">
-    <p>kwnjfnje</p>
+    <!--<p>kwnjfnje</p>-->
   </div>
 
 
