menu bar and related article and some features added

--- a/src/app/blog/article/article-body/article-body.component.html
+++ b/src/app/blog/article/article-body/article-body.component.html
@@ -5,18 +5,18 @@
        <div class="div_1">
          <div class="main_details">
            <div class="box_1">
-             <p class="txt_category">{{category_name}}</p>
+             <p class="txt_category">{{article_write_date}} | {{read_time}} | {{category_name}} </p>
              <p class="txt_title">{{article_title}}</p>
            </div>
-           <div class="box_2">
-             <div class="img_profile">
-               <img class="img_pro" src="{{article_wrtiter_profile}}" alt="">
-             </div>
-             <div class="profile_data">
-               <div class="txt_writter">{{article_wrtiter}}</div>
-               <div class="txt_date">{{article_write_date}}</div>
-             </div>
-           </div>
+           <!--<div class="box_2">-->
+           <!--<div class="img_profile">-->
+           <!--<img class="img_pro" src="{{article_wrtiter_profile}}" alt="">-->
+           <!--</div>-->
+           <!--<div class="profile_data">-->
+           <!--<div class="txt_writter">{{article_wrtiter}}</div>-->
+           <!--<div class="txt_date">{{article_write_date}}</div>-->
+           <!--</div>-->
+           <!--</div>-->
          </div>
        </div>
        <div class="div_2">
@@ -25,22 +25,6 @@
        </div>
 
      </div>
-  </div>
-
-  <!--social media and hr ruler >>>>-->
-  <div class="main_bar">
-    <div class="social_bar">
-      <div class="social-media">
-        <div class="txt_share">Share: </div>
-
-        <img class="social-icon" src="../../../assets/images/icons/social/instagram.svg" alt="">
-        <img class="social-icon" src="../../../assets/images/icons/social/twitter.svg" alt="">
-        <img class="social-icon" src="../../../assets/images/icons/social/linkedin.svg" alt="">
-      </div>
-    </div>
-    <div class="ruler">
-      <hr class="hr_ruler">
-    </div>
   </div>
 
 
@@ -97,8 +81,21 @@
     </ul>
     </body>
     </html>
+    <!--social media and hr ruler >>>>-->
+    <div class="main_bar">
+      <div class="social_bar">
+        <div class="social-media">
+          <div class="txt_share">Share:</div>
 
+          <img class="social-icon" src="../../../assets/images/icons/social/instagram.svg" alt="">
+          <img class="social-icon" src="../../../assets/images/icons/social/twitter.svg" alt="">
+          <img class="social-icon" src="../../../assets/images/icons/social/linkedin.svg" alt="">
+        </div>
+      </div>
+
+    </div>
 
   </div>
+
 </div>
 
