--- a/src/app/blog/article/article-footer/article-footer.component.html
+++ b/src/app/blog/article/article-footer/article-footer.component.html
@@ -11,7 +11,10 @@
 
       <button class="btn_submit">Submit</button>
     </div>
-    <div class="ruler"></div>
+
+    <!--<div class="ruler"></div>-->
   </div>
 
 </div>
+
+<app-related-article></app-related-article>
