--- a/src/app/template/blog-header/blog-header.component.scss
+++ b/src/app/template/blog-header/blog-header.component.scss
@@ -1,7 +1,7 @@
 .main {
   width: 100%;
   height: 80px;
-  background-color: black;
+  background-color: #111111;
   //background-color: rgba(17, 17, 17, 0.8);
   color: white;
   display: flex;
@@ -147,3 +147,32 @@
     width: 38px!important;
   }
 }
+
+.menu-panel {
+  margin: -8px 0;
+  padding: 8px 0;
+  background-color: #111111;
+  border: none;
+  outline: none;
+  //border-radius: 10px;
+}
+
+.btn_menu {
+  background-color: #111111 !important;
+  color: white;
+  width: 300px;
+
+}
+
+.menu_footer {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .footer_txt {
+    color: gray;
+    font-size: 11px;
+  }
+}
+
