post new template design half completed

--- a/src/app/blog/article/related-card/related-card.component.scss
+++ b/src/app/blog/article/related-card/related-card.component.scss
@@ -48,3 +48,9 @@
   font-family: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, system-ui, sans-serif;
 
 }
+
+@media only screen and (max-width: 920px) {
+  .card_style {
+    width: 18rem!important;
+  }
+}
