--- a/src/app/template/blog-footer/blog-footer.component.scss
+++ b/src/app/template/blog-footer/blog-footer.component.scss
@@ -1,13 +1,13 @@
 .space_box {
   height: 10vh;
   width: 100%;
-  background-color: #111111;
+  background-color: white;
 }
 
 .footer-main-body {
   height: 30vh;
   width: 100%;
-  background-color: #111111;
+  //background-color: #111111;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -239,7 +239,7 @@
 .bg-f {
   height: 25vh;
   width: 100%;
-  background-color: #111111;
+  //background-color: #111111;
   display: flex;
   justify-content: center;
   align-items: center;
