--- a/src/app/template/blog-header/blog-header.component.html
+++ b/src/app/template/blog-header/blog-header.component.html
@@ -35,6 +35,18 @@
     <button class="btn_menu" mat-menu-item>Category</button>
     <button class="btn_menu" mat-menu-item>Authors</button>
     <button class="btn_menu" mat-menu-item>Bookmark</button>
+
+    <div class="ruler"></div>
+    <!--<div class="box_body">-->
+      <div class="social-media">
+        <img class="social-icon" src="../../../assets/images/icons/social/github.svg" alt="">
+        <img class="social-icon" src="../../../assets/images/icons/social/instagram.svg" alt="">
+        <img class="social-icon" src="../../../assets/images/icons/social/twitter.svg" alt="">
+        <img class="social-icon" src="../../../assets/images/icons/social/linkedin.svg" alt="">
+        <img class="social-icon" src="../../../assets/images/icons/social/youtube.svg" alt="">
+
+      </div>
+    <!--</div>-->
     <div class="menu_footer">
       <p class="footer_txt">Copyright. 2022 Wizlab Solution. All Right Reserved</p>
     </div>
