--- a/src/app/blog/article/article-body/article-body.component.html
+++ b/src/app/blog/article/article-body/article-body.component.html
@@ -20,7 +20,7 @@
          </div>
        </div>
        <div class="div_2">
-         <img class="img_main" src="{{article_main_img}}" alt="">
+         <img class="img_main"  src="{{article_main_img}}" alt="">
 
        </div>
 
@@ -32,13 +32,13 @@
   <div class="space_div"></div>
 
   <!--description area >>>>-->
-  <div class="des_area">
+  <div class="des_area" data-aos="zoom-in-up">
     <!doctype html>
     <html>
     <head>
       <title></title>
     </head>
-    <body style="background-color: #111111; color: #9EACB9;">
+    <body style="background-color: #111111; color: #9EACB9;" >
     <h1><span style="font-family:Times New Roman,Times,serif;"><span style="font-size:16px;"><strong>What is object-oriented programming?</strong></span></span></h1>
 
     <p><span style="font-family:Times New Roman,Times,serif;"><span style="font-size:14px;">Object-oriented programming (OOP) is a computer programming model that organizes software design around data, or objects, rather than functions and logic. An object can be defined as a data field that has unique attributes and behavior.</span></span></p>
@@ -53,7 +53,7 @@
 
     <p><span style="font-family:Times New Roman,Times,serif;"><span style="font-size:14px;">Once an object is known, it is labeled with a&nbsp;<a href="https://www.techtarget.com/whatis/definition/class">class</a>&nbsp;of objects that defines the kind of data it contains and any logic sequences that can manipulate it. Each distinct logic sequence is known as a method. Objects can communicate with well-defined interfaces called messages.</span></span></p>
 
-    <h3><span style="font-family:Times New Roman,Times,serif;">What is the structure of object-oriented programming?</span></h3>
+    <h3 ><span style="font-family:Times New Roman,Times,serif;">What is the structure of object-oriented programming?</span></h3>
 
     <p><span style="font-family:Times New Roman,Times,serif;">The structure, or building blocks, of object-oriented programming include the following:</span></p>
 
@@ -88,7 +88,7 @@
           <div class="txt_share">Share:</div>
 
           <img class="social-icon" src="../../../assets/images/icons/social/instagram.svg" alt="">
-          <img class="social-icon" src="../../../assets/images/icons/social/twitter.svg" alt="">
+          <img  class="social-icon" src="../../../assets/images/icons/social/twitter.svg" alt="">
           <img class="social-icon" src="../../../assets/images/icons/social/linkedin.svg" alt="">
         </div>
       </div>
