--- a/src/app/blog/article/related-article/related-article.component.scss
+++ b/src/app/blog/article/related-article/related-article.component.scss
@@ -33,3 +33,14 @@
 
   }
 }
+
+
+
+@media only screen and (max-width: 920px) {
+  .related_card_body {
+    width: 90% !important;
+  }
+  .txt_header {
+    font-size: 24px!important;
+  }
+}
