--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -3,7 +3,7 @@
 
 <section class="main">
   <app-blog-header></app-blog-header>
-  <app-landing-page></app-landing-page>
+  <!--<app-landing-page></app-landing-page>-->
   <ngx-cursor color="transparent" border="3px solid white" cursor-hasintha   [selectors]="['Hasintha', 'Home', 'name']"
               [words]="['Hasintha', '< prev', 'next >']"></ngx-cursor>
   <app-post-list></app-post-list>
