--- a/src/app/template/blog-header/blog-header.component.scss
+++ b/src/app/template/blog-header/blog-header.component.scss
@@ -1,7 +1,7 @@
 .main {
   width: 100%;
   height: 80px;
-  background-color: #111111;
+  background-color: white;
   //background-color: rgba(17, 17, 17, 0.8);
   color: white;
   display: flex;
@@ -25,6 +25,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      &:focus {
+        outline: none;
+      }
       .logo_img {
         width: 60px;
         &:hover {
@@ -154,9 +157,19 @@
   background-color: #111111;
   border: none;
   outline: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   //border-radius: 10px;
 }
 
+.ruler {
+  height: 1px;
+  width: 90%;
+  background-color: gray;
+  margin-bottom: 20px;
+}
 .btn_menu {
   background-color: #111111 !important;
   color: white;
@@ -176,3 +189,53 @@
   }
 }
 
+//.box_body {
+//  height: 85%;
+//  width: 100%;
+//  background-color: red;
+//  display: flex;
+//  align-items: start;
+//  justify-content: space-around;
+//  flex-direction: column;
+
+.social-media {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  .social-icon {
+    width: 27px;
+  }
+}
+
+  .txt_intro {
+    color: #A0A089;
+    font-size: 16px;
+  }
+
+  .input_email {
+    width: 100%;
+    height: 43px;
+    border: none;
+    border-radius: 5px;
+    background-color: #252525;
+    padding-left: 10px;
+    color: white;
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .btn_submit {
+    width: 100%;
+    height: 37px;
+    border: none;
+    border-radius: 5px;
+    background-color: #1F7A4E;
+    padding-left: 10px;
+    color: white;
+    font-size: 18px;
+
+  }
+//}
