--- a/src/app/portfolio/built/built.component.html
+++ b/src/app/portfolio/built/built.component.html
@@ -3,11 +3,11 @@
   <div class="shop24-body">
     <div class="side_1">
       <div class="flex_1">
-        <span class="txt_01">03.</span><span class="txt_header"> Some Things I’ve Built </span>        <span class="ruler"></span>
+        <span class="txt_01">03.</span><span class="txt_header"> Some Things I’ve Build </span>        <span class="ruler"></span>
       </div>
       <div class="flex_2">
 
-        <div class="div_cover">
+        <div class="div_cover" data-aos="zoom-in-up" (click)="openUrl('https://24shop.lk/')">
           <img class="img_cov" src="../../../assets/images/img/24shop.png" alt="">
         </div>
 
@@ -17,21 +17,21 @@
     <div class="side_2">
       <div class="side_2_box">
         <p class="txt_project_featured">Featured Project</p>
-        <p class="txt_project_Name">Halcyon Theme</p>
+        <p class="txt_project_Name" (click)="openUrl('https://24shop.lk/')">24-Shop</p>
 
         <div class="style_box">
-          <p class="pro_description">A minimal, dark blue theme for VS Code, Sublime Text, Atom, iTerm, and more. Available on Visual Studio Marketplace, Package Control, Atom Package Manager, and npm.</p>
+          <p class="pro_description">24-shop is one of I developed e-commerce website for client. It's develop by Using Angular and Firebase with Algolia. You can visit this site - Click here</p>
 
         </div>
 
         <div class="technology">
-          <p class="txt_tech">VS Code</p>
-          <p class="txt_tech">VS Code</p>
-          <p class="txt_tech">VS Code</p>
-          <p class="txt_tech">VS Code</p>
+          <p class="txt_tech">Angular</p>
+          <p class="txt_tech">Firebase</p>
+          <p class="txt_tech">Fire Store</p>
+          <p class="txt_tech">Algolia</p>
 
         </div>
-        <div class="btn_section">
+        <div class="btn_section" (click)="openUrl('https://24shop.lk/')">
           <img class="img_link" src="../../../assets/images/icons/icons8-geography-50.png" alt="">
         </div>
 
@@ -44,13 +44,13 @@
 
   <div class="youtube-body">
     <div class="side_2">
-      <div class="side_2_box">
-        <p class="txt_project_Name">Hasiya Teh</p>
+      <div class="side_2_box" >
+        <p class="txt_project_Name" (click)="openUrl('https://www.youtube.com/channel/UCyQ_idXqiolcVzf3Y4MnsaQ')">Hasiya Tech</p>
 
         <p class="txt_project_featured">Youtube Content Creation</p>
 
         <div class="style_box">
-          <p class="pro_description">A minimal, dark blue theme for VS Code, Sublime Text, Atom, iTerm, and more. Available on Visual Studio Marketplace, Package Control, Atom Package Manager, and npm.</p>
+          <p class="pro_description"> I'm YouTube content creator and I create Technology and Programming related videos in this channel.</p>
 
         </div>
 
@@ -58,22 +58,22 @@
           <p class="txt_tech">Tech</p>
           <p class="txt_tech">Review</p>
           <p class="txt_tech">Programming</p>
-          <p class="txt_tech">PC</p>
+          <p class="txt_tech">Knowledge</p>
 
         </div>
-        <div class="btn_section">
+        <div class="btn_section" (click)="openUrl('https://www.youtube.com/channel/UCyQ_idXqiolcVzf3Y4MnsaQ')">
           <img class="img_link" src="../../../assets/images/icons/icons8-geography-50.png" alt="">
         </div>
 
       </div>
     </div>
-    <div class="side_1">
+    <div class="side_1" >
       <div class="flex_1">
         <span class="txt_01">04.</span><span class="txt_header"> My Youtube work </span>        <span class="ruler"></span>
       </div>
       <div class="flex_2">
 
-        <div class="div_cover">
+        <div class="div_cover" data-aos="zoom-in-up" (click)="openUrl('https://www.youtube.com/channel/UCyQ_idXqiolcVzf3Y4MnsaQ')" >
           <img class="img_cov" src="../../../assets/images/img/youtube.png" alt="">
         </div>
 
