--- a/src/app/portfolio/touch/touch.component.html
+++ b/src/app/portfolio/touch/touch.component.html
@@ -3,11 +3,10 @@
     <div class="main">
       <p class="txt_header">05. <span>What’s Next?</span></p>
       <p class="txt_title">Get In Touch</p>
-      <p class="txt_des">Although I’m not currently looking for any new opportunities, my inbox is always open. Whether
-        you have a question or just want to say hi, I’ll try my best to get back to you!</p>
+      <p class="txt_des"> I’m looking for new Software Engineer  opportunities, my inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!</p>
 
     </div>
-    <button class="btn_show_more">Feedback</button>
-
+<!--    <button class="btn_show_more" (click)="openFeedback()">Feedback</button>-->
+        <button class="btn_show_more" (click)="openResume()">Resume</button>
   </div>
 </div>
