--- a/src/app/portfolio/about/about.component.html
+++ b/src/app/portfolio/about/about.component.html
@@ -8,8 +8,8 @@
       <div class="flex_2">
 
         <div class="div_description">
-          <p class="txt_des">Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in <span class="txt_hightlight">web development </span>started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</p>
-            <p class="txt_des">Fast-forward to today, and I’ve had the privilege of working at <span class="txt_hightlight"> an advertising agency, a start-up, a huge corporation, and a student-led design studio.</span> My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.</p>
+          <p class="txt_des">Hello! My name is Hasintha and I enjoy creating things that live on the internet. My interest in <span class="txt_hightlight">web development </span>started back in 2018 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</p>
+            <p class="txt_des">Fast-forward to today, and Currently working at <span class="txt_hightlight"> Epic Lanka Software Company in Sri Lanka.</span> My main focus these days learn 3D web development and I need introduce modern Web Technologies For IT Industry</p>
         </div>
         <div class="div_language">
           <p class="txt_language">Here are a few technologies I’ve been working with recently:</p>
@@ -17,30 +17,30 @@
             <div class="language_box">
               <div class="div_language">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
-                <p class="txt_lan">JavaScript (ES6+)</p>
-              </div>
-              <div class="div_language">
-                <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
-                <p class="txt_lan">react</p>
+                <p class="txt_lan">Python</p>
               </div>
               <div class="div_language">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
                 <p class="txt_lan">Angular</p>
+              </div>
+              <div class="div_language">
+                <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
+                <p class="txt_lan">Java</p>
               </div>
 
             </div>
             <div class="language_box">
               <div class="div_language">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
-                <p class="txt_lan">TypeScript</p>
+                <p class="txt_lan">React</p>
               </div>
               <div class="div_language">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
-                <p class="txt_lan">Eleventy</p>
+                <p class="txt_lan">Java Script</p>
               </div>
               <div class="div_language">
                 <img class="img_arrow" src="../../../assets/images/icons/arrow.png" alt="">
-                <p class="txt_lan">WordPress</p>
+                <p class="txt_lan">Spring Boot</p>
               </div>
             </div>
           </div>
