--- a/src/app/portfolio/projects/projects.component.html
+++ b/src/app/portfolio/projects/projects.component.html
@@ -6,52 +6,51 @@
     </div>
     <div class="flex_2">
       <div class="row_1">
-        <div class="box_1">
+        <div class="box_1" data-aos="zoom-in-up"  (click)="openLink('https://github.com/Hasintha-git/Linkedin.io')">
           <div class="box_1_body">
             <div class="header">
               <img class="img_card_logo" src="../../../assets/images/icons/social/folder.svg" alt="">
               <img class="img_card_logo" src="../../../assets/images/icons/social/github.svg" alt="">
             </div>
             <div class="title">
-              <p class="txt_title">Integrating Algolia Search with WordPress Multisite</p>
+              <p class="txt_title">Linkedin Clone Mobile Application</p>
 
             </div>
             <div class="body">
-              <p class="txt_des">We were tasked with revamping the web experience for a college of a large university, and each school revamping the web experience for a college of a large university, and each school</p>
+              <p class="txt_des">This is Linkedin Clone mobile application using React Native and Firebase. This main focus for learn React Native and How to work with Firebase. </p>
 
             </div>
             <div class="footer">
-              <p class="txt_lan">Algolia</p>
+              <p class="txt_lan">React Native</p>
               <p class="txt_lan">Firebase</p>
-              <p class="txt_lan">Node</p>
 
             </div>
           </div>
 
         </div>
-        <div class="box_1">
+        <div class="box_1" data-aos="zoom-in-up"  (click)="openLink('https://github.com/Hasintha-git/Article-Site')">
           <div class="box_1_body">
             <div class="header">
               <img class="img_card_logo" src="../../../assets/images/icons/social/folder.svg" alt="">
               <img class="img_card_logo" src="../../../assets/images/icons/social/github.svg" alt="">
             </div>
             <div class="title">
-              <p class="txt_title">Integrating Algolia Search with WordPress Multisite</p>
+              <p class="txt_title">Article Web Site</p>
 
             </div>
             <div class="body">
-              <p class="txt_des">We were tasked with revamping the web experience for a college of a large university, and each school revamping the web experience for a college of a large university, and each school</p>
+              <p class="txt_des">This is Article website using Node js, Express Js and Mongo db. This is simple article site and mainly focus education.</p>
 
             </div>
             <div class="footer">
-              <p class="txt_lan">Express</p>
-              <p class="txt_lan">Java</p>
-              <p class="txt_lan">Mongodb</p>
+              <p class="txt_lan">NodeJS</p>
+              <p class="txt_lan">ExpressJS</p>
+              <p class="txt_lan">MongoDb</p>
 
             </div>
           </div>
         </div>
-        <div class="box_1">
+        <div class="box_1" data-aos="zoom-in-up" (click)="openLink('https://github.com/Hasintha-git/Expense-Tracking-Application')">
           <div class="box_1_body">
             <div class="header">
               <img class="img_card_logo" src="../../../assets/images/icons/social/folder.svg" alt="">
@@ -59,17 +58,16 @@
 
             </div>
             <div class="title">
-              <p class="txt_title">Integrating Algolia Search with WordPress Multisite</p>
+              <p class="txt_title">Expense Tracking Mobile Application</p>
 
             </div>
             <div class="body">
-              <p class="txt_des">We were tasked with revamping the web experience for a college of a large university, and each school revamping the web experience for a college of a large university, and each school</p>
+              <p class="txt_des">This is Mobile Application Project and It's features are add monthly income and manage your income and store your expense and you can got some idea about future days and you can view all details about it.</p>
 
             </div>
             <div class="footer">
-              <p class="txt_lan">Angular</p>
-              <p class="txt_lan">Spring</p>
-              <p class="txt_lan">Mysql</p>
+              <p class="txt_lan">ReactNative</p>
+              <p class="txt_lan">MongoDB</p>
 
             </div>
           </div>
@@ -77,7 +75,7 @@
 
       </div>
       <div class="row_2">
-        <div class="box_2">
+        <div class="box_2" data-aos="zoom-in-up"  (click)="openLink('https://github.com/Hasintha-git/Covid-19-Tracker/tree/main/Covid%20app')">
           <div class="box_1_body">
             <div class="header">
               <img class="img_card_logo" src="../../../assets/images/icons/social/folder.svg" alt="">
@@ -85,11 +83,33 @@
 
             </div>
             <div class="title">
-              <p class="txt_title">Integrating Algolia Search with WordPress Multisite</p>
+              <p class="txt_title">Covid 19 Tracker - Live</p>
 
             </div>
             <div class="body">
-              <p class="txt_des">We were tasked with revamping the web experience for a college of a large university, and each school revamping the web experience for a college of a large university, and each school</p>
+              <p class="txt_des">This is web application and you can watch current Infected, Recovered, Deaths Global and country wise. I using React, Meterial Ui, Chart JS and Covid19 Mathdro api. </p>
+
+            </div>
+            <div class="footer">
+              <p class="txt_lan">React</p>
+              <p class="txt_lan">Covid19 Api</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="box_2" data-aos="zoom-in-up" (click)="openLink('https://github.com/Hasintha-git/Easy-Car-Rental-Web-Application')">
+          <div class="box_1_body">
+            <div class="header">
+              <img class="img_card_logo" src="../../../assets/images/icons/social/folder.svg" alt="">
+              <img class="img_card_logo" src="../../../assets/images/icons/social/github.svg" alt="">
+
+            </div>
+            <div class="title">
+              <p class="txt_title">Car Rental Web System</p>
+
+            </div>
+            <div class="body">
+              <p class="txt_des">This is car rental system and develop by using Angular, Spring, My Sql and Angular Material. It's web project and car rental all manage features included.</p>
 
             </div>
             <div class="footer">
@@ -100,7 +120,7 @@
             </div>
           </div>
         </div>
-        <div class="box_2">
+        <div class="box_2" data-aos="zoom-in-up" (click)="openLink('https://github.com/Hasintha-git/wizlab-prediction')">
           <div class="box_1_body">
             <div class="header">
               <img class="img_card_logo" src="../../../assets/images/icons/social/folder.svg" alt="">
@@ -108,47 +128,24 @@
 
             </div>
             <div class="title">
-              <p class="txt_title">Integrating Algolia Search with WordPress Multisite</p>
+              <p class="txt_title">Car Price Prediction Using MI</p>
 
             </div>
             <div class="body">
-              <p class="txt_des">We were tasked with revamping the web experience for a college of a large university, and each school revamping the web experience for a college of a large university, and each school</p>
+              <p class="txt_des">This project is Car Price Prediction web application using Machine Learning, Python and numpy, pandas, scikit-learn packages and learn focus project
+              </p>
 
             </div>
             <div class="footer">
-              <p class="txt_lan">Angular</p>
-              <p class="txt_lan">Spring</p>
-              <p class="txt_lan">Mysql</p>
-
-            </div>
-          </div>
-        </div>
-        <div class="box_2">
-          <div class="box_1_body">
-            <div class="header">
-              <img class="img_card_logo" src="../../../assets/images/icons/social/folder.svg" alt="">
-              <img class="img_card_logo" src="../../../assets/images/icons/social/github.svg" alt="">
-
-            </div>
-            <div class="title">
-              <p class="txt_title">Integrating Algolia Search with WordPress Multisite</p>
-
-            </div>
-            <div class="body">
-              <p class="txt_des">We were tasked with revamping the web experience for a college of a large university, and each school revamping the web experience for a college of a large university, and each school</p>
-
-            </div>
-            <div class="footer">
-              <p class="txt_lan">Angular</p>
-              <p class="txt_lan">Spring</p>
-              <p class="txt_lan">Mysql</p>
+              <p class="txt_lan">Python</p>
+              <p class="txt_lan">Machine Learning</p>
 
             </div>
           </div>
         </div>
       </div>
     </div>
-    <button class="btn_show_more">Show more</button>
+    <button class="btn_show_more" (click)="openGithubRepo()">Show more</button>
 
   </div>
 
