--- a/src/app/portfolio/worked/epic/epic.component.html
+++ b/src/app/portfolio/worked/epic/epic.component.html
@@ -6,19 +6,17 @@
 
 </div>
 <div class="box_body">
-  <p class="txt_pdetails">Write modern, performant, maintainable code for a diverse array of client and internal projects
-    Work with a variety of different languages, platforms, frameworks, and content management </p>
+  <p class="txt_pdetails">I Successfully completed Year Software Engineer Internship at Epic. That Period Could i learn Fintech domain and experience with Angular and Spring boot and more about It Industry</p>
 </div>
 
 
 <div class="box_position">
-  <p class="txt_position">Software Engineer Associate</p>
+  <p class="txt_position">Associate Software Developer * </p>
 </div>
 <div class="box_duration">
   <p class="txt_duration">Aug 2022 - Present</p>
 
 </div>
 <div class="box_body">
-  <p class="txt_pdetails">Write modern, performant, maintainable code for a diverse array of client and internal projects
-    Work with a variety of different languages, platforms, frameworks, and content management </p>
+  <p class="txt_pdetails">Currently I work on Associate Software Developer at Epic Lanka.</p>
 </div>
