--- a/src/app/portfolio/home-page/home-page.component.scss
+++ b/src/app/portfolio/home-page/home-page.component.scss
@@ -15,6 +15,7 @@
     left: 0;
   }
   .social-box {
+    z-index: 9999;
     width: 50px;
     height: 400px;
     //background-color: red;
@@ -28,6 +29,7 @@
       justify-content: space-evenly;
       align-items: center;
       flex-direction: column;
+      z-index: 9999;
       //background-color: yellow;
       .social-icon {
         width: 27px;
@@ -233,6 +235,7 @@
         display: flex!important;
         justify-content: space-evenly;
         align-items: center;
+        z-index: 9999;
         flex-direction: column;
       }
     }
@@ -277,6 +280,7 @@
     display: none;
   }
   .name-box {
+    z-index: 9999;
     //display: none;
     right: 10px!important;
     .name-intro {
@@ -289,6 +293,7 @@
       justify-content: space-evenly;
       align-items: center;
       flex-direction: column;
+      z-index: 9999;
     }
   }
   .home-body {
