--- a/src/app/template/social-media/social-media.component.scss
+++ b/src/app/template/social-media/social-media.component.scss
@@ -5,6 +5,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  z-index: 9999;
   //background-color: yellow;
   .social-icon {
     width: 27px;
