--- a/src/app/portfolio/worked/worked.component.scss
+++ b/src/app/portfolio/worked/worked.component.scss
@@ -2,6 +2,9 @@
    width: 100%;
    height: 80vh;
    background-color: #0A192F;
+  //background: radial-gradient(circle at 97% 25%, #0A192F 0%, #0A192F 25%);
+  //background: radial-gradient(circle at 97% 25%, #040c18 0%, #0a192f 25%, #0a192f 100%);
+
 
    display: flex;
    justify-content: center;
