--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -4,12 +4,12 @@
       <button type="button" mat-button class="btn-route" routerLink="/portfolio">
         01. Home
       </button>
-      <button type="button" mat-button class=" btn-route" routerLink="/blog">
-        02. Blog
-      </button>
-      <button type="button" mat-button class=" btn-route">
-        03. Shopping
-      </button>
+      <!--<button type="button" mat-button class=" btn-route" routerLink="/blog">-->
+        <!--02. Blog-->
+      <!--</button>-->
+      <!--<button type="button" mat-button class=" btn-route">-->
+        <!--03. Shopping-->
+      <!--</button>-->
       <button type="button" mat-button class=" btn-resume" (click)="openResume()">
         Resume
       </button>
@@ -24,7 +24,6 @@
 
   </mat-drawer>
 
-
   <div class="logo-section">
     <img src="../../../assets/images/logos/logo.png" class="img" (click)="drawer.toggle()">
   </div>
@@ -38,15 +37,16 @@
 <!--    </button>-->
 
 <!--    need remove >>>>-->
-    <button type="button" mat-button class="btn-route" >
-      01. Home
-    </button>
+
     <button type="button" mat-button class=" btn-route" >
-      02. Blog
+      <!--02. Blog-->
     </button>
 <!--    <<<<<<<<<<<<<<<<<<<<-->
     <button type="button" mat-button class=" btn-route">
-      03. Shopping
+      <!--03. Shopping-->
+    </button>
+    <button type="button" mat-button class="btn-route" >
+      <!--01. Home-->
     </button>
     <button type="button" mat-button class=" btn-resume"  (click)="openResume()">
       Resume
