youtube section add and seo add

--- a/src/app/portfolio/home-page/home-page.component.html
+++ b/src/app/portfolio/home-page/home-page.component.html
@@ -22,11 +22,11 @@
 
     </div>
     <div class="box-2">
-      <p class="txt-name"  >{{name}}</p>
-      <p class="txt-what-do">{{profession}}</p>
+      <h1 class="txt-name"  >{{name}}</h1>
+      <h2 class="txt-what-do">{{profession}}</h2>
     </div>
     <div class="box-3">
-      <p class="txt-description">{{description}}</p>
+      <h3 class="txt-description">{{description}}</h3>
 
     </div>
     <div class="box-4">
