--- a/src/app/portfolio/projects/projects.component.html
+++ b/src/app/portfolio/projects/projects.component.html
@@ -150,3 +150,49 @@
   </div>
 
 </div>
+
+
+<!-- youtube video -->
+
+<div class="youtube-home-body">
+  <div class="youtube-body">
+    <div class="flex_1">
+      <span class="txt_header"> You Tube Videos  </span>
+      <span class="txt_sub"> Hasiya Tech </span>
+    </div>
+    <div class="flex_2">
+      <div class="row_1">
+        <div class="box_1" data-aos="zoom-in-up"  >
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/QonMavvejAw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        </div>
+
+      </div>
+      <div class="row_2">
+        <div class="box_2" data-aos="zoom-in-up"  >
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/tFn2Cs0ZHRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      
+      
+      </div>
+
+      <div class="row_1">
+        <div class="box_1" data-aos="zoom-in-up">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/vqvNrF7-cI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        </div>
+
+      </div>
+      <div class="row_2">
+        <div class="box_2" data-aos="zoom-in-up"  >
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/mw6zqmwRJlQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      
+      
+      </div>
+    </div>
+    <button class="btn_show_more" (click)="openYoutubeChannel()">Show more</button>
+
+  </div>
+
+</div>
