--- a/src/app/portfolio/about/about.component.scss
+++ b/src/app/portfolio/about/about.component.scss
@@ -154,7 +154,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 80%;
+        width: 300px;
+        height: 300px;
         //height: 300px;
         //border-right: 2px solid white;
         //border-bottom: 2px solid white;
@@ -169,6 +170,7 @@
         .img_hasintha {
           width: auto;;
           height: auto;
+          border: 5px solid white;
 
         }
       }
@@ -207,8 +209,9 @@
       }
     }
     .flex_img {
-      width: auto!important;
-      height: auto!important;
+      width: 200px!important;
+      height: 200px!important;
+      padding-top: 20px;
       border: none!important;
       //background-color: #80cbc4;
     }
