--- a/src/app/portfolio/projects/projects.component.scss
+++ b/src/app/portfolio/projects/projects.component.scss
@@ -218,6 +218,228 @@
   }
 }
 
+.youtube-home-body {
+  width: 100%;
+  height: 220vh;
+  background-color: #0A192F;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  .youtube-body {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .flex_1 {
+      z-index: 99;
+      width: 100%;
+      height: 100px;
+      flex-direction: column;
+      display: flex;
+      align-items: center;
+      //background-color: red;
+      justify-content: space-evenly;
+      .txt_sub {
+        font-size: 14px;
+        color: #CCD6F6;
+        font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+
+      }
+      .txt_header {
+        color: #CCD6F6;
+        font-size: 28px;
+        font-family: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, system-ui, sans-serif;
+        font-weight: bold;
+      }
+      .ruler {
+        width: 200px;
+        margin-left: 20px;
+        height: 1px;
+        background-color: gray;
+      }
+    }
+    .flex_2 {
+      //flex: 0;
+      //background-color: orange;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: column;
+      align-items: center;
+      .row_1 {
+        //background-color: red;
+        width: 560px;
+        height: 70%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        .box_1 {
+          width: 100%;
+          height: 100%;
+          // background-color: #112240;
+          border-radius: 5px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          //padding: 20px;
+          //padding: 10px!important;
+          margin: 5px;
+          .box_1_body {
+            width: 90%;
+            height: 90%;
+            color: #CCD6F6;
+            //border: 1px solid rebeccapurple;
+            .header {
+              width: 100%;
+              height: 20%;
+              //background-color: red;
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              justify-content: space-between;
+              //margin: 20px;
+            }
+            .img_card_logo {
+              width: 33px;
+              height: 33px;
+            }
+            .title {
+              width: 100%;
+              height: 20%;
+              //background-color: yellow;
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              .txt_title {
+                color: #CCD6F6;
+                font-weight: 500;
+                font-size: 18px;
+              }
+              .txt_des {
+                color: #CCD6F6;
+              font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+                font-size: 13px;
+                font-weight: 500;
+              }
+            }
+            .body {
+              width: 100%;
+              height: 50%;
+              //background-color: red;
+
+            }
+            .footer {
+              width: 70%;
+              height: 10%;
+              //background-color: yellow;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+
+
+            }
+          }
+        }
+      }
+      .row_2 {
+        //background-color: yellow;
+        width: 560px;
+        height: 70%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        .box_2 {
+          width: 100%;
+          height: 100%;
+          // background-color: #112240;
+
+          border-radius: 5px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          //padding: 20px;
+          //padding: 10px!important;
+          margin: 5px;
+          .box_1_body {
+            width: 90%;
+            height: 90%;
+            color: #CCD6F6;
+            .header {
+              width: 100%;
+              height: 20%;
+              //background-color: red;
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              justify-content: space-between;
+              //margin: 20px;
+            }
+            .img_card_logo {
+              width: 33px;
+              height: 33px;
+            }
+            .title {
+              width: 100%;
+              height: 20%;
+              //background-color: yellow;
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              .txt_title {
+                color: #CCD6F6;
+                font-weight: 500;
+                font-size: 18px;
+              }
+              .txt_des {
+                color: #CCD6F6;
+                font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+                font-size: 13px;
+                font-weight: 500;
+              }
+            }
+            .body {
+              width: 100%;
+              height: 50%;
+              //background-color: red;
+
+            }
+            .footer {
+              width: 70%;
+              height: 10%;
+              //background-color: yellow;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+
+
+            }
+          }
+        }
+      }
+    }
+
+    .btn_show_more {
+      width: 150px;
+      height: 44px;
+      background-color: transparent;
+      border: 1px solid #64FFDA;
+      color: #64FFDA;
+      border-radius: 5px;
+      margin-top: 50px;
+      font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+    }
+
+  }
+}
 .txt_hightlight {
   color: #5FF1D0;
 }
@@ -306,6 +528,10 @@
     height: auto !important;
   }
 
+  .youtube-home-body {
+    height: auto !important;
+  }
+
   .projects-body {
     //height: 130vh!important;
     //background-color: #5CEACB;
@@ -328,6 +554,10 @@
 
   }
 
+  .youtube-home-body {
+    padding-bottom: 50px;
+  }
+
 }
 
 //mobile >>
@@ -337,13 +567,20 @@
     height: auto !important;
 
   }
+  .youtube-home-body {
+    height: auto !important;
 
+  }
 }
 
 //small mobile >>
 @media only screen and (max-width: 348px) {
   .home-body {
     height: auto !important;
+  }
+  .youtube-home-body {
+    height: auto !important;
+
   }
   .language {
 
